# keyboard_mecanum

./: .gitignore  ROS2_JAZZY说明.md  install.sh  package.xml  qr_scan.py  readme.md  setup.cfg  setup.py  test_system.sh  使用指南.md  快速参考.txt  文件清单.md  项目说明.md
keyboard_mecanum/: __init__.py  keyboard_control_node.py  qr_scanner_node.py
launch/: full_system_launch.py  keyboard_control_launch.py  qr_scanner_launch.py
yahboomcar_ctrl_ref/yahboomcar_ctrl/: yahboom_joy.py  yahboom_keyboard.py
